Fix card width and enhance title alignment in CSS

--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ main h1 {
   justify-content: space-between;
   align-items: center;
   height: 250px;
-  width: auto;
+  width: 350px;
   padding: 20px;
   background-color: blue;
   border-left: 10px solid orange;
@@ -39,10 +39,15 @@ main h1 {
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
 }
+.card .title {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 .card-container .card .pages {
   width: 100%;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
-  padding-bottom: 20px;
 }
